fix: data generatos